--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>GIT</h1>
+        <p>Desarrollo Colaborativo</p>
+    </header>
 </body>
 </html>
